--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          9a
+          9AM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="09">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -46,97 +46,97 @@
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          10AM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="10">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
+        </div>
+
+        <div class="w-100"></div> 
+        
+        <div class="col">
+          11AM
+        </div>
+        <div class="col-6 time-block hour" data-hour="11">
+          <textarea rows="1" cols="50"></textarea>
+        </div>
+        <div class="col">
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          12PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="12">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          1PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="13">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          2PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="14">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          3PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="15">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          4PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="16">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
 
         <div class="col">
-          1 of 3
+          5PM
         </div>
-        <div class="col-6">
-          2 of 3 (wider)
-        </div>
-        <div class="col">
-          3 of 3
-        </div>
-
-        <div class="w-100"></div>
-
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col-6">
-          2 of 3 (wider)
+        <div class="col-6 time-block hour" data-hour="17">
+          <textarea rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          3 of 3
+          <button class="saveBtn">
         </div>
 
         <div class="w-100"></div>
