saveText function, save(event) function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           9AM
         </div>
         <div class="col-6 time-block hour" data-hour="09">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="09" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -49,7 +49,7 @@
           10AM
         </div>
         <div class="col-6 time-block hour" data-hour="10">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="10" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -61,7 +61,7 @@
           11AM
         </div>
         <div class="col-6 time-block hour" data-hour="11">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="11" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -73,7 +73,7 @@
           12PM
         </div>
         <div class="col-6 time-block hour" data-hour="12">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="12" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -85,7 +85,7 @@
           1PM
         </div>
         <div class="col-6 time-block hour" data-hour="13">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="13" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -97,7 +97,7 @@
           2PM
         </div>
         <div class="col-6 time-block hour" data-hour="14">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="14" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -109,7 +109,7 @@
           3PM
         </div>
         <div class="col-6 time-block hour" data-hour="15">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="15" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -121,7 +121,7 @@
           4PM
         </div>
         <div class="col-6 time-block hour" data-hour="16">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="16" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
@@ -133,7 +133,7 @@
           5PM
         </div>
         <div class="col-6 time-block hour" data-hour="17">
-          <textarea rows="1" cols="50"></textarea>
+          <textarea data-description="17" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
           <button class="saveBtn">
