finalized js functions

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           9AM
         </div>
         <div class="col-6 time-block hour" data-hour="09">
-          <textarea data-description="09" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-0" data-description="09" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="0"></i>
         </div>
 
         <div class="w-100"></div>
@@ -49,10 +49,10 @@
           10AM
         </div>
         <div class="col-6 time-block hour" data-hour="10">
-          <textarea data-description="10" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-1" data-description="10" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="1"></i>
         </div>
 
         <div class="w-100"></div> 
@@ -61,10 +61,10 @@
           11AM
         </div>
         <div class="col-6 time-block hour" data-hour="11">
-          <textarea data-description="11" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-2" data-description="11" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="2"></i>
         </div>
 
         <div class="w-100"></div>
@@ -73,10 +73,10 @@
           12PM
         </div>
         <div class="col-6 time-block hour" data-hour="12">
-          <textarea data-description="12" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-3" data-description="12" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="3"></i>
         </div>
 
         <div class="w-100"></div>
@@ -85,10 +85,10 @@
           1PM
         </div>
         <div class="col-6 time-block hour" data-hour="13">
-          <textarea data-description="13" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-4" data-description="13" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="4"></i>
         </div>
 
         <div class="w-100"></div>
@@ -97,10 +97,10 @@
           2PM
         </div>
         <div class="col-6 time-block hour" data-hour="14">
-          <textarea data-description="14" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-5" data-description="14" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="5"></i>
         </div>
 
         <div class="w-100"></div>
@@ -109,10 +109,10 @@
           3PM
         </div>
         <div class="col-6 time-block hour" data-hour="15">
-          <textarea data-description="15" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-6" data-description="15" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="6"></i>
         </div>
 
         <div class="w-100"></div>
@@ -121,10 +121,10 @@
           4PM
         </div>
         <div class="col-6 time-block hour" data-hour="16">
-          <textarea data-description="16" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-7" data-description="16" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="7"></i>
         </div>
 
         <div class="w-100"></div>
@@ -133,10 +133,10 @@
           5PM
         </div>
         <div class="col-6 time-block hour" data-hour="17">
-          <textarea data-description="17" class="description" rows="1" cols="50"></textarea>
+        <textarea id="scheduleKey-8" data-description="17" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <button class="saveBtn">
+          <i:hover class="far fa-save fa-2xl saveBtn" data-scheduleKey="8"></i>
         </div>
 
         <div class="w-100"></div>
