--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <h2>Current Time &amp; Date: <br /> <span id="time-display">00:00:00</span></h2>
+      <h2 class=time>Current Time &amp; Date: <br /> <span id="time-display">00:00:00</span></h2>
       <p id="currentDay" class="lead"></p>
     </header>
     
@@ -136,7 +136,7 @@
         <textarea id="scheduleKey-8" data-description="17" class="description" rows="1" cols="50"></textarea>
         </div>
         <div class="col">
-          <i:hover class="far fa-save fa-2xl saveBtn" data-scheduleKey="8"></i>
+          <i:hover class="far fa-save saveBtn" data-scheduleKey="8"></i>
         </div>
 
         <div class="w-100"></div>
